--- a/css/navbar.css
+++ b/css/navbar.css
@@ -4,10 +4,19 @@
     margin: 0;
 }
 
+html,
 body {
     font-family: "Mulish";
     background-color: #0e0e0e;
     overflow-x: hidden;
+    max-width: 100vw;
+    position: relative;
+}
+
+@media screen and (min-width: 0px) {
+    body {
+        overflow-x: hidden;
+    }
 }
 
 .navbar {
@@ -89,7 +98,7 @@ body {
 }
 
 @media screen and (max-width: 767px) {
-    .navbar{
+    .navbar {
         flex-direction: column;
         z-index: 100;
         align-items: flex-start;
